--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,5 +1,10 @@
+:root {
+    /* --background-main-color: rgba(0, 0, 0, 0.3);
+    --default-blur: blur(40px);
+    --tiny-shadow: 0 0 10px rgba(0, 0, 0, 0.3); */
+}
+
 html {
-    background-color: rgba(27, 38, 54, 1);
     text-align: center;
     color: white;
 }
@@ -12,15 +17,16 @@ body {
     sans-serif;
 }
 
+#root {
+    background-color: rgba(0, 0, 0, 0.6);
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
 @font-face {
     font-family: "Nunito";
     font-style: normal;
     font-weight: 400;
     src: local(""),
     url("assets/fonts/nunito-v16-latin-regular.woff2") format("woff2");
-}
-
-#app {
-    height: 100vh;
-    text-align: center;
 }
