--- a/frontend/src/components/Login/Login.module.css
+++ b/frontend/src/components/Login/Login.module.css
@@ -8,17 +8,50 @@
 .form {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	gap: 32px;
+	width: 80%;
+	padding: 72px 24px;
+}
+
+.title {
+	font-size: 24px;
+	line-height: 100%;
+	margin: 0;
+}
+
+.textfields {
+	display: flex;
+	flex-flow: column nowrap;
+	gap: 16px;
+}
+
+.secondaryActions {
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.actionButtons {
+	display: flex;
+	flex-flow: column nowrap;
+	gap: 16px;
 	align-items: center;
 	justify-content: center;
-	gap: 8px;
-	width: 100%;
-	margin: 24px;
 }
 
-.h2 {
-	margin: 0;
+.formControl { 
+	display: flex !important;
+	flex-flow: row nowrap !important;
+	align-items: center !important;
 }
 
-.p {
-	margin: 0;
+.redirectToRegister {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.forgotPassword:visited {
+	color: inherit;
 }
