--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,6 +7,7 @@
 html {
     text-align: center;
     color: white;
+    user-select: none;
 }
 
 body {
@@ -18,7 +19,7 @@ body {
 }
 
 #root {
-    background-color: rgba(0, 0, 0, 0.6);
+    /* background-color: rgba(0, 0, 0, 0.6); */
     min-width: 100vw;
     min-height: 100vh;
 }
