--- a/frontend/src/pages/LoginPage/LoginPage.module.css
+++ b/frontend/src/pages/LoginPage/LoginPage.module.css
@@ -9,6 +9,7 @@
 	overflow: hidden;
 	width: fit-content;
 	padding: 72px 24px;
+	max-width: 550px;
 	/* border-radius: 16px; */
 	/* background-color: var(--background-main-color);
 	backdrop-filter: var(--backdrop-filter);
