--- a/frontend/src/components/Layouts/PrivateLayout/PrivateLayout.module.css
+++ b/frontend/src/components/Layouts/PrivateLayout/PrivateLayout.module.css
@@ -19,15 +19,69 @@
 }
 
 .aside {
-  grid-row: 2 / 3;
+  grid-row: 1 / 3;
   grid-column: 1 / 2;
   height: calc(100% - calc(var(--layout-padding) * 2));
 }
 
 .main {
-  grid-row: 2 / 3;
+  grid-row: 1 / 3;
   grid-column: 2 / 3;
   display: flex;
   flex-flow: row nowrap;
   height: calc(100% - calc(var(--layout-padding) * 2));
+}
+
+.aside_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* padding: 8px 0; */
+  overflow: hidden;
+}
+
+.menu_options_container {
+  padding: 8px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.menu_option a {
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.65);
+  display: flex;
+  flex: 1;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 8px;
+  background-color: rgba(255, 255, 255, 0);
+  transition: color 0.1s ease, background-color 0.1s ease;
+}
+
+.menu_option a:hover {
+  color: rgba(255, 255, 255, 0.85);
+  background-color: rgba(255, 255, 255, 0.05);
+}
+
+.profile_container {
+  display: flex;
+  padding: 8px 16px;
+  align-items: center;
+  justify-content: space-between;
+  color: rgba(255, 255, 255, 0.85)
+}
+
+.user_profile {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  color: inherit;
+  text-decoration: none;
+}
+
+.user_name { 
+  overflow: hidden;
+  white-space: nowrap;
+  max-width: 128px;
+  text-overflow: ellipsis;
 }
