Avances de la pantalla de proyectos y endpoint para actualizar foto de perfil

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -29,6 +29,21 @@ hr {
     margin: 0;
 }
 
+.emergable {
+    animation: emergable 0.3s ease-in;
+}
+
+@keyframes emergable {
+    from {
+        opacity: 0;
+        transform: translateY(16px);
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 @font-face {
     font-family: "Nunito";
     font-style: normal;
