--- a/frontend/src/components/Layouts/PrivateLayout/PrivateLayout.module.css
+++ b/frontend/src/components/Layouts/PrivateLayout/PrivateLayout.module.css
@@ -41,7 +41,7 @@
 }
 
 .menu_options_container {
-  padding: 8px 0;
+  /* padding: 8px 0 !important; */
   display: flex;
   flex-direction: column;
 }
