--- a/frontend/src/pages/HomePage/components/UserChip/UserChip.module.css
+++ b/frontend/src/pages/HomePage/components/UserChip/UserChip.module.css
@@ -8,11 +8,18 @@
 
 .mainInfo {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    gap: 0.5em;
+
+    img {
+        width: 10dvh;
+        aspect-ratio: 1 / 1;
+        border-radius: 50%;
+        border: solid 0.2em #6b2594;    
+    }
 }
 
-.projectName {
+.userName {
     font-size: large;
 
     a, a:hover, a:visited, a:active {
@@ -20,12 +27,6 @@
         text-decoration: none;
     }
 
-}
-
-.progressIndicator {
-    background-color: #6b2594;
-    padding: 0.3em;
-    border-radius: 0.5em;
 }
 
 .detail {
